output/starcoder2_temp1.0/modern_envoy_003.yaml
# Generated by ollama (starcoder2)
# Prompt: Create Envoy configuration with HTTP filters for request processing. Define filter chains including router filter for traffic routing. Set up retry policies and timeout configurations for backend connections. This is for our service mesh data plane.
# Category: envoy_authz_filter_missing

...
http_filters:
  - name: envoy.filters.http.router
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  - name: envoy.filters.http.cors
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
        enable_Cors: true
retry_policy:
  retry_on: 5xx, gateway-error, connect-failure, retriable-4xx # <-- this one
  num_retries: 0
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.RetryPolicy
  http_connection_manager:
    codec_type: AUTO # <-- default
    route_config:
     name: local_route
       virtual_hosts:
         - name: frontend
           domains:
           - "*"
          typed_per_filter_config:
             envoy.filters.http.router:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
             #  this will match all routes (i.e. it is equivalent to the `*` in Envoy's CLI)
             router_filter:
               name: envoy.router
              typed_config:
                 "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    http2_protocol_options:
      allow_absolute_url: true
...
